--- a/RESULTADO JANEIRO.HTML
+++ b/RESULTADO JANEIRO.HTML
@@ -20,6 +20,6 @@
     </style>
 </head>
 <body>
-    <img src="/DFC JANEIRO_page-0001.jpg" alt="Imagem centralizada">
+    <img src="DFC JANEIRO_page-0001.jpg" alt="Imagem centralizada">
 </body>
 </html>
