--- a/RESULTADO FEVEREIRO.HTML
+++ b/RESULTADO FEVEREIRO.HTML
@@ -10,9 +10,11 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh;
             margin: 0;
             background-color: #1A1AFF;
+            padding: 20px;
+            box-sizing: border-box;
         }
         img {
             max-width: 80%;
@@ -23,6 +25,6 @@
 </head>
 <body>
     <img src="DFC JANEIRO_page-0001.jpg" alt="Imagem centralizada">
-    <img src="DFC JANEIRO_page-0002.jpg" alt="Segunda imagem centralizada">
+    <img src="/DFC JANEIRO_page-0002.jpg" alt="Segunda imagem centralizada">
 </body>
 </html>
