--- a/RESULTADO FEVEREIRO.HTML
+++ b/RESULTADO FEVEREIRO.HTML
@@ -25,6 +25,6 @@
 </head>
 <body>
     <img src="DFC JANEIRO_page-0001.jpg" alt="Imagem centralizada">
-    <img src="/DFC JANEIRO_page-0002.jpg" alt="Segunda imagem centralizada">
+    <img src="DFC JANEIRO_page-0002.jpg" alt="Segunda imagem centralizada">
 </body>
 </html>
