--- a/RESULTADO JANEIRO.HTML
+++ b/RESULTADO JANEIRO.HTML
@@ -3,23 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RESULTADO JANEIRO</title>
+    <title>Imagem Centralizada</title>
     <style>
         body {
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh;
             margin: 0;
             background-color: #1A1AFF;
+            padding: 20px;
+            box-sizing: border-box;
         }
         img {
             max-width: 80%;
             height: auto;
+            margin: 10px 0;
         }
     </style>
 </head>
 <body>
     <img src="DFC JANEIRO_page-0001.jpg" alt="Imagem centralizada">
+    <img src="DFC JANEIRO_page-0002.jpg" alt="Segunda imagem centralizada">
 </body>
 </html>
