--- a/RESULTADO FEVEREIRO.HTML
+++ b/RESULTADO FEVEREIRO.HTML
@@ -24,7 +24,6 @@
     </style>
 </head>
 <body>
-    <img src="DFC JANEIRO_page-0001.jpg" alt="Imagem centralizada">
-    <img src="DFC JANEIRO_page-0002.jpg" alt="Segunda imagem centralizada">
+    <img src="DFC FEVEREIRO_page-0001.jpg" alt="Imagem centralizada">
 </body>
 </html>
