--- a/RESULTADO FEVEREIRO.HTML
+++ b/RESULTADO FEVEREIRO.HTML
@@ -25,5 +25,6 @@
 </head>
 <body>
     <img src="DFC FEVEREIRO_page-0001.jpg" alt="Imagem centralizada">
+    <img src="DFC FEVEREIRO_page-0002.jpg" alt="Segunda imagem centralizada">
 </body>
 </html>
